--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
         <!-- ************* Apache POI ******************** -->
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
+            <artifactId>poi-ooxml</artifactId>
             <version>3.15</version>
         </dependency>
     </dependencies>
