--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/intersectionsdatabase
+jdbc.url=jdbc:mysql://localhost:3306/intersectionsdatabase
 jdbc.username=root
 jdbc.password=1111
