--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,26 +5,26 @@
 	 version="3.1">
     
     <!-- Context -->
-    <context-param>
+<!--    <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/spring/applicationContext.xml,
             /WEB-INF/spring/database.xml,
             /WEB-INF/spring/spring-security.xml
         </param-value>
-    </context-param>
+    </context-param>-->
     
     <!-- Listeners -->
-    <listener>
+<!--    <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+    </listener>-->
     
     <listener>
         <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
     </listener>
     
     <!-- Dispatcher Servlet -->
-    <servlet>
+<!--    <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
@@ -42,7 +42,7 @@
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
     
     <!-- Filters -->
     <filter>
@@ -55,7 +55,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     
-    <filter>
+<!--    <filter>
         <filter-name>MultipartFilter</filter-name>
         <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
     </filter>
@@ -63,7 +63,7 @@
     <filter-mapping>
         <filter-name>MultipartFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
     
     <filter>
      <filter-name>hibernateFilter</filter-name>
