--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>4.2.0.RELEASE</version>
         </dependency>
+        <!-- *************** AspectJ EL ******************* -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.10</version>
+        </dependency>
+
         <!--   ************* Hibernate ******************** -->
         <dependency>
             <groupId>org.hibernate</groupId>
